table spacing fix

--- a/weather-report-frontend/src/app/components/forecast/forecast.component.scss
+++ b/weather-report-frontend/src/app/components/forecast/forecast.component.scss
@@ -21,3 +21,11 @@
         border: 0;
     }
 }
+
+.nowrap {
+    white-space: nowrap;
+}
+
+.t-cell {
+    padding: 0.5rem;
+}
